# ivp

./: .gitignore  CMakeLists.txt
cmake/: ivp-config-build-tree.cmake.in  ivp-config.cmake.in  ivp.pc.in
havana/: CMakeLists.txt
havana/havok/hk_base/: base_types.h  console.cpp  display.h
havana/havok/hk_base/array/: array.cpp  array.h  array.inl  pre_allocated_array.h
havana/havok/hk_base/hash/: hash.h
havana/havok/hk_base/id_server/: id_server.cpp  id_server.h
havana/havok/hk_base/memory/: memory.cpp  memory.h  memory.inl  memory_managed_virtual_class.h
havana/havok/hk_base/stopwatch/: stopwatch_qpt.inl
havana/havok/hk_math/: densematrix.h  math.inl  spatial_matrix.cpp
havana/havok/hk_math/gauss_elimination/: gauss_elimination.cpp  gauss_elimination.h
havana/havok/hk_math/lcp/: lcp_solver.cpp
havana/havok/hk_math/quaternion/: quaternion.h
havana/havok/hk_math/vector3/: vector3.inl  vector3_util.cpp
havana/havok/hk_math/vector_fpu/: vector_fpu.h  vector_fpu.inl
havana/havok/hk_physics/: physics.h
havana/havok/hk_physics/constraint/: constraint.cpp  constraint.h
havana/havok/hk_physics/constraint/ball_socket/: ball_socket_bp.h
havana/havok/hk_physics/constraint/breakable_constraint/: breakable_constraint_bp.h
havana/havok/hk_physics/constraint/car_wheel/: car_wheel_constraint.cpp
havana/havok/hk_physics/constraint/local_constraint_system/: local_constraint_system.cpp  local_constraint_system_bp.h
havana/havok/hk_physics/constraint/ragdoll/: ragdoll_constraint_bp_builder.cpp
havana/havok/hk_physics/constraint/stiff_spring/: stiff_spring_bp.h
havana/havok/hk_physics/core/vm_query_builder/: vm_query_builder.h
havana/havok/hk_physics/simunit/: psi_info.h
ivp_collision/: ivp_3d_solver.cxx  ivp_3d_solver.hxx  ivp_cache_ledge_point.hxx  ivp_clustering_longrange.cxx  ivp_clustering_longrange.hxx  ivp_clustering_lrange_hash.cxx  ivp_clustering_lrange_hash.hxx  ivp_clustering_visual_hash.cxx  ivp_clustering_visual_hash.hxx  ivp_clustering_visualizer.cxx  ivp_clustering_visualizer.hxx  ivp_coll_del_root_mindist.cxx  ivp_collision.hxx  ivp_collision_filter.cxx  ivp_collision_filter.hxx  ivp_compact_ledge.cxx  ivp_compact_ledge.hxx  ivp_compact_ledge_solver.cxx  ivp_compact_ledge_solver.hxx  ivp_i_collision_vhash.cxx  ivp_i_collision_vhash.hxx  ivp_listener_collision.hxx  ivp_mindist.cxx  ivp_mindist.hxx  ivp_mindist_debug.cxx  ivp_mindist_event.cxx  ivp_mindist_event.hxx  ivp_mindist_intern.hxx  ivp_mindist_macros.hxx  ivp_mindist_mcases.cxx  ivp_mindist_minimize.cxx  ivp_mindist_minimize.hxx  ivp_mindist_recursive.cxx  ivp_oo_watcher.cxx  ivp_range_manager.cxx  ivp_range_manager.hxx  ivp_ray_solver.cxx  ivp_ray_solver.hxx  ivp_sphere_solver.cxx  ivp_sphere_solver.hxx  (+1 more)
ivp_compact_builder/: 3dsimport_co.cxx  3dsimport_load.cxx  3dsimport_load.hxx  3dsimport_out.cxx  geompack.hxx  geompack_cutfac.cxx  geompack_drdec3.cxx  ivp_compact_ledge_gen.cxx  ivp_compact_ledge_gen.hxx  ivp_compact_modify.hxx  ivp_compact_recursive.cxx  ivp_compact_recursive.hxx  ivp_convex_decompositor.cxx  ivp_convex_decompositor.hxx  ivp_halfspacesoup.cxx  ivp_halfspacesoup.hxx  ivp_i_fpoint_vhash.hxx  ivp_i_point_vhash.hxx  ivp_object_polygon_tetra.cxx  ivp_object_polygon_tetra.hxx  ivp_rot_inertia_solver.cxx  ivp_rot_inertia_solver.hxx  ivp_surbuild_3ds.hxx  ivp_surbuild_halfspacesoup.cxx  ivp_surbuild_halfspacesoup.hxx  ivp_surbuild_ledge_soup.cxx  ivp_surbuild_ledge_soup.hxx  ivp_surbuild_pointsoup.cxx  ivp_surbuild_pointsoup.hxx  ivp_surbuild_polygon_convex.cxx  ivp_surbuild_polygon_convex.hxx  ivp_surbuild_polyhdrn_cncv.cxx  ivp_surbuild_polyhdrn_cncv.hxx  ivp_surbuild_q12.cxx  ivp_surbuild_q12.hxx  ivp_template_surbuild.hxx  ivp_templates_intern.cxx  ivp_templates_intern.hxx  ivp_tetra_intrude.cxx  ivp_tetra_intrude.hxx  (+15 more)
ivp_controller/: ivp_actuator.cxx  ivp_actuator.hxx  ivp_actuator_info.hxx  ivp_actuator_spring.cxx  ivp_actuator_spring.hxx  ivp_attacher_to_cores.hxx  ivp_buoyancy_solver.cxx  ivp_buoyancy_solver.hxx  ivp_car_system.cxx  ivp_car_system.hxx  ivp_car_wheel_physics.cxx  ivp_constraint.cxx  ivp_constraint.hxx  ivp_constraint_car.cxx  ivp_constraint_car.hxx  ivp_constraint_fixed_keyed.cxx  ivp_constraint_fixed_keyed.hxx  ivp_constraint_local.cxx  ivp_constraint_local.hxx  ivp_constraint_types.hxx  ivp_controller.cxx  ivp_controller.hxx  ivp_controller_airboat.cpp  ivp_controller_airboat.h  ivp_controller_buoyancy.cxx  ivp_controller_buoyancy.hxx  ivp_controller_factory.hxx  ivp_controller_fake_jetski.cpp  ivp_controller_fake_jetski.h  ivp_controller_floating.cxx  ivp_controller_floating.hxx  ivp_controller_golem.hxx  ivp_controller_motion.cxx  ivp_controller_motion.hxx  ivp_controller_raycast_car.cxx  ivp_controller_raycast_car.hxx  ivp_controller_stiff_spring.cxx  ivp_controller_stiff_spring.hxx  ivp_controller_world_frict.cxx  ivp_controller_world_frict.hxx  (+7 more)
ivp_intern/: ivp_ball.cxx  ivp_cache_ledge_point.hxx  ivp_calc_next_psi_solver.cxx  ivp_calc_next_psi_solver.hxx  ivp_controller_phantom.cxx  ivp_core.cxx  ivp_environment.cxx  ivp_friction.cxx  ivp_friction.hxx  ivp_friction_gaps.cxx  ivp_friction_solver.hxx  ivp_great_matrix.cxx  ivp_hull_manager.cxx  ivp_hull_manager.hxx  ivp_hull_manager_macros.hxx  ivp_i_collision_vhash.hxx  ivp_i_controller_vhash.hxx  ivp_i_friction_hash.cxx  ivp_i_friction_hash.hxx  ivp_i_object_vhash.cxx  ivp_i_object_vhash.hxx  ivp_impact.cxx  ivp_impact.hxx  ivp_merge_core.cxx  ivp_merge_core.hxx  ivp_mindist_friction.cxx  ivp_object.cxx  ivp_object_attach.cxx  ivp_physic.cxx  ivp_physic_private.cxx  ivp_physic_private.hxx  ivp_polygon.cxx  ivp_sim_unit.cxx  ivp_sim_unit.hxx  ivp_time.cxx
ivp_physics/: ive_graphics.cxx  ive_graphics.hxx  ivp_3d_solver.hxx  ivp_anchor.hxx  ivp_anomaly_manager.cxx  ivp_anomaly_manager.hxx  ivp_authenticity.hxx  ivp_ball.hxx  ivp_betterdebugmanager.cxx  ivp_betterdebugmanager.hxx  ivp_betterstatisticsmanager.cxx  ivp_betterstatisticsmanager.hxx  ivp_cache_object.cxx  ivp_cache_object.hxx  ivp_clustering_visual_hash.cxx  ivp_clustering_visual_hash.hxx  ivp_clustering_visualizer.cxx  (+60 more)
(+57 files in other folders)
